Updated lasagna with directions

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     <h1>This is a recipe for Lasagna</h1> 
+    <img src="img/lasagna.png" alt="lasagna picture">
+    <p>Ingredients:</p>
+    <ul>
+        <li>Pasta</li>
+        <li>Beef</li>
+        <li>Cheese</li>
+        <li>Pizza Sauce</li>
+    </ul>
+    <p>Steps</p>
+    <ol>
+        <li>Cook Pasta</li>
+        <li>Brown the Beef</li>
+        <li>Preheat oven to 350</li>
+        <li>Layer Pasta, Beef w/sauce, and Cheese</li>
+        <li>Cook for 30 mins.</li>
+        <li>Enjoy!</li>
+    </ol>
+
 </body>
 </html>
