Updated index.html to point at cookies and lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is a recipe for Lasagna</h1> 
-    <img src="img/lasagna.png" alt="lasagna picture">
+    <img src="../img/lasagna.png" alt="lasagna picture" width="400">
     <p>Ingredients:</p>
     <ul>
         <li>Pasta</li>
