--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="lasagna.html">Lasagna</a>
-    
+    <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/cookies.html">Cookies</a>
+
 </body>
 </html>
